--- a/estilo.css
+++ b/estilo.css
@@ -144,24 +144,31 @@ body>section{
 /*MENU USUARIO LOGEADO*/
 .menu_user_logeado{
 	background-color: #87d3ff;
-	text-align: center;
 	padding: 1em 0;
 	display: flex;
 	flex-direction: column;
 }
 
-	.menu_user_logeado>p{
-		padding: 1em;
+	.menu_user_logeado>h2{
+		align-self: center;
 	}
+
+	.menu_user_logeado>ul{
+		padding: 1em;
+		align-self: center;
+	}
+		.menu_user_logeado>ul>li{
+			padding: 1em;
+		}
 	
-		.menu_user_logeado>p>a{
-			text-decoration: none;
-		}
-		
-		.menu_user_logeado>p>a:hover{
-			background-color: #FFFFFF;
-			color: #336699;
-		}
+			.menu_user_logeado>ul>li>a{
+				text-decoration: none;
+			}
+			
+			.menu_user_logeado>ul>li>a:hover{
+				background-color: #FFFFFF;
+				color: #336699;
+			}
 	
 /*DETALLE FOTO*/
 
