--- a/estilo.css
+++ b/estilo.css
@@ -72,7 +72,7 @@ body>section{
 .formularios{
 	background-color: #87d3ff;
 	text-align: center;
-	padding: 1em 0 0 0;
+	padding: 2em 0 0 0;
 	display: flex;
 	flex-direction: column;
 }
@@ -84,25 +84,22 @@ body>section{
         padding: 1em;
 		align-self: center;
 	}
-		.formularios>form>label{
-			color: white;
-		}
-
-		.formularios>form>input{
-			display: block;
-			margin: .3em auto 1em auto; 
-		}
 		
-		.formularios>form>textarea{
-			display: block;
-			margin: auto; 
-			margin: .3em auto 1em auto; 
-		}
-		
-		.formularios>form>select{
-			display: block;
-			margin: auto; 
-			margin: .3em auto 1em auto; 
+	.formularios>form>input{
+		display: block;
+		margin: .3em auto 1em auto; 
+	}
+	
+	.formularios>form>textarea{
+		display: block;
+		margin: auto; 
+		margin: .3em auto 1em auto; 
+	}
+	
+	.formularios>form>select{
+		display: block;
+		margin: auto; 
+		margin: .3em auto 1em auto; 
 	}
 	
 	.formularios>table{
@@ -123,14 +120,13 @@ body>section{
 .formulario_buscar{
 	background-color: #87d3ff;
 	text-align: center;
-	padding: 2em 0 0 0;
+	padding: 2em 0 2em 0;
 	display: flex;
 	flex-direction: inline-block;
 }
 
 	.formulario_buscar>h2{
 		padding: 1em 0 1.2em 1em;
-		color: white;
 	}
 	
 	.formulario_buscar>form{
@@ -138,10 +134,6 @@ body>section{
 		align-self: center;
 	}
 	
-	.formulario_buscar>form>label{
-		color: white;
-	}
-
 	.formulario_buscar>form>input{
 		display: inline-block;
 		margin: auto; 
@@ -152,12 +144,7 @@ body>section{
 /*MENU USUARIO LOGEADO*/
 .menu_user_logeado{
 	background-color: #87d3ff;
-<<<<<<< HEAD
-	text-align: center;
-	padding: 1em 0 0 0;
-=======
 	padding: 1em 0;
->>>>>>> 23a648ee09250ba40fb6357ea1892b22ba6bc368
 	display: flex;
 	flex-direction: column;
 }
@@ -170,20 +157,8 @@ body>section{
 		padding: 1em;
 		align-self: center;
 	}
-<<<<<<< HEAD
-	
-		.menu_user_logeado>p>a{
-			text-decoration: none;
-			color: black;
-		}
-		
-		.menu_user_logeado>p>a:hover{
-			background-color: #FFFFFF;
-			color: black;
-=======
 		.menu_user_logeado>ul>li{
 			padding: 1em;
->>>>>>> 23a648ee09250ba40fb6357ea1892b22ba6bc368
 		}
 	
 			.menu_user_logeado>ul>li>a{
