--- a/estilo.css
+++ b/estilo.css
@@ -30,7 +30,7 @@ body>header{
 body>nav{
 	overflow: auto;
 	width: 100%;
-	background-color: #546e7a;
+	background-color: #666666;
 }
 body>nav>ul{
 	padding: 0;
@@ -54,7 +54,7 @@ body>nav>ul{
 			}
 .buscador{
 	padding: .08em .4em;
-	background-color: #546e7a;
+	background-color: #666666;
 	float: right;
 }
 .enlace{
@@ -70,9 +70,9 @@ body>section{
 
 /*FORMULARIOS*/
 .formularios{
-	background-color: #87d3ff;
+	background-color: #336699;
 	text-align: center;
-	padding: 2em 0 0 0;
+	padding: 1em 0 0 0;
 	display: flex;
 	flex-direction: column;
 }
@@ -84,22 +84,25 @@ body>section{
         padding: 1em;
 		align-self: center;
 	}
+		.formularios>form>label{
+			color: white;
+		}
+
+		.formularios>form>input{
+			display: block;
+			margin: .3em auto 1em auto; 
+		}
 		
-	.formularios>form>input{
-		display: block;
-		margin: .3em auto 1em auto; 
-	}
-	
-	.formularios>form>textarea{
-		display: block;
-		margin: auto; 
-		margin: .3em auto 1em auto; 
-	}
-	
-	.formularios>form>select{
-		display: block;
-		margin: auto; 
-		margin: .3em auto 1em auto; 
+		.formularios>form>textarea{
+			display: block;
+			margin: auto; 
+			margin: .3em auto 1em auto; 
+		}
+		
+		.formularios>form>select{
+			display: block;
+			margin: auto; 
+			margin: .3em auto 1em auto; 
 	}
 	
 	.formularios>table{
@@ -107,6 +110,9 @@ body>section{
 		background-color: white;
 		border-collapse: collapse;
 		
+	}
+	.formularios>table>th{
+		background-color: #336699;
 	}
 	
 	
@@ -118,15 +124,16 @@ body>section{
 	
 
 .formulario_buscar{
-	background-color: #87d3ff;
+	background-color: #336699;
 	text-align: center;
-	padding: 2em 0 2em 0;
+	padding: 2em 0 0 0;
 	display: flex;
 	flex-direction: inline-block;
 }
 
 	.formulario_buscar>h2{
 		padding: 1em 0 1.2em 1em;
+		color: white;
 	}
 	
 	.formulario_buscar>form{
@@ -134,6 +141,10 @@ body>section{
 		align-self: center;
 	}
 	
+	.formulario_buscar>form>label{
+		color: white;
+	}
+
 	.formulario_buscar>form>input{
 		display: inline-block;
 		margin: auto; 
@@ -143,76 +154,28 @@ body>section{
 	
 /*MENU USUARIO LOGEADO*/
 .menu_user_logeado{
-	background-color: #87d3ff;
-	padding: 1em 0;
-	display: flex;
-	flex-direction: column;
-}
-
-	.menu_user_logeado>h2{
-		align-self: center;
-	}
-
-	.menu_user_logeado>ul{
-		padding: 1em;
-		align-self: center;
-	}
-		.menu_user_logeado>ul>li{
-			padding: 1em;
-		}
-	
-			.menu_user_logeado>ul>li>a{
-				text-decoration: none;
-			}
-			
-			.menu_user_logeado>ul>li>a:hover{
-				background-color: #FFFFFF;
-				color: #336699;
-			}
-	
-/*DETALLE FOTO*/
-
-.detalle{
-	background-color: #87d3ff;
+	background-color: #336699;
 	text-align: center;
-	padding: 1em 0;
+	padding: 1em 0 0 0;
 	display: flex;
 	flex-direction: column;
 }
 
-	.detalle>h2{
-		padding: 1em 0 1em 1em;
+	.menu_user_logeado>p{
+		padding: 1em;
 	}
 	
-	.detalle>form{
-		padding: 1em 0 1em 1em;
-	}
-		
-	.detalle>article{
-		padding:1.5em;
-		border-top: 1px solid #000000;;
-	}
-		.detalle>article>ul{
-			list-style-type: none;
-			overflow: hidden;
+		.menu_user_logeado>p>a{
+			text-decoration: none;
+			color: black;
 		}
 		
-			.detalle>article>ul>li{
-				display: inline-block;
-				text-align: center;
-				padding: 1em;
-			}
-			
+		.menu_user_logeado>p>a:hover{
+			background-color: #FFFFFF;
+			color: black;
+		}
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+
 /*PIE DE PAGINA*/
 body>footer{
 	background-color: #336699;
