--- a/estilo.css
+++ b/estilo.css
@@ -152,6 +152,10 @@ body>section{
 		align-self: center;
 	}
 	
+	.menu_user_logeado>h3{
+		align-self: center;
+	}
+	
 
 	.menu_user_logeado>ul{
 		padding: 1em;
