--- a/estilo_imprimir.css
+++ b/estilo_imprimir.css
@@ -178,7 +178,14 @@ body>section{
 		margin:auto;
 		background-color: white;
 		border-collapse: collapse;
-		
+	}
+
+	.formularios>table>caption{
+		display: none;
+	}
+	
+	.formularios>details{
+		display: none;
 	}
 	
 	.formularios>table, td{
