P6 mitad de camino (quedan dos paginas)

--- a/estilo_accesible.css
+++ b/estilo_accesible.css
@@ -1,6 +1,5 @@
 *{
 	margin: 0;
-	-ms-overflow-style: none;
 }
 
 body{
@@ -8,6 +7,7 @@ body{
 	font-size: 24px;
 	max-width: 1500px;
 	margin: 0 auto;
+	overflow: scroll;
 }
 
 input {
@@ -20,11 +20,6 @@ textarea {
 
 select {
 	font-size: 24px;
-}
-
-/*ESCONDER BARRA DE SCROLL*/
-::-webkit-scrollbar {
-display: none;
 }
 
 /*CABECERA*/
@@ -156,7 +151,7 @@ body>section{
 	}
 
 	.formularios>form{
-        padding: 1em;
+        padding: 0 1em 1em 1em;
 		align-self: center;
 	}
 
@@ -188,7 +183,7 @@ body>section{
 		}
 	
 	.formularios>table{
-		margin:auto;
+		margin: 0 auto 1em auto;
 		background-color: white;
 		border-collapse: collapse;
 	}
