--- a/estilo.css
+++ b/estilo.css
@@ -274,6 +274,26 @@ body>section{
 				padding: 1em;
 			}
 
+
+
+/*RES BUSQUEDA*/
+.titulo_filtros_busq{
+	text-align: center;
+	margin: 1em;
+}
+
+.filtros_busq{
+	text-align: center;
+}
+.filtros_busq>p{
+	display: inline;
+	margin: 1em;
+}
+/*RES BUSQUEDA*/
+
+
+
+
 /*PIE DE PAGINA*/
 body>footer{
 	background-color: #336699;
@@ -330,6 +350,14 @@ body>footer{
 			color: white;
 			float: none;
 			margin-left: 2%;
+		}
+
+		.filtros_busq{
+			text-align: center;
+		}
+		.filtros_busq>p{
+			display: inline-block;
+			margin: 1em;
 		}
 }
 
