--- a/Estilo/estilo_clasico.css
+++ b/Estilo/estilo_clasico.css
@@ -133,6 +133,18 @@ body>section{
 		margin: 0 0 1em 0;
 	}
 
+	.formularios>p{
+		margin-bottom: 1em;
+	}
+
+	.formularios>p>a{
+		color: black;
+	}
+
+	.formularios>p>a:hover{
+		background-color: white;
+	}
+
 	.formularios>form{
         padding: 0 1em 1em 1em;
 		align-self: center;
