--- a/Estilo/estilo.css
+++ b/Estilo/estilo.css
@@ -244,6 +244,17 @@ body>section{
 		padding-top: .5%;
 		padding-bottom: .5em;
 	}
+	.menu_user_logeado>h4{
+		align-self: center;
+		padding-top: .5%;
+		padding-bottom: .5em;
+	}
+		.menu_user_logeado>h4>a{
+			color: black;
+		}
+		.menu_user_logeado>h4>a:hover{
+			background-color: white;
+		}
 	.menu_user_logeado>p{
 		padding-top: .5em;
 		padding-left: 5%;
@@ -257,11 +268,9 @@ body>section{
 		.menu_user_logeado>ul>li{
 			padding: 1em;
 		}
-
 			.menu_user_logeado>ul>li>a{
 				color: black;
 			}
-
 			.menu_user_logeado>ul>li>a:hover{
 				background-color: white;
 			}
