--- a/Estilo/estilo_accesible.css
+++ b/Estilo/estilo_accesible.css
@@ -82,7 +82,12 @@ body>nav>ul{
 .puntero_mano{
 	cursor: pointer;
 }
-
+body>hr{
+	margin-top: 1em;
+	margin-left: .5em;
+	margin-right: .5em;
+	border: .4em solid black;
+}
 /*MOSTRAR FOTOS*/
 body>section{
 	width: 100%;
